Hosting Website On Kubernetes/Ingress-Context-Path-Based-Routing/kube-manifests/03-Ingress-Service-Manifests/Ingress-Context-Path-Based-Routing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
spec:  
  rules:
  - http:
      paths:      
      - path: /app1/
        backend:
          serviceName: usermgmt-webapp-clusterip-service
          servicePort: 80
      - path: /
        backend:
          serviceName: pilankar-masale-clusterip-service
          servicePort: 80
